// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeerList should render 1`] = `
<div>
  <div>
    <div
      class="sc-AxiKw jaovnp"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Network
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Name
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Peer IP
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                >
                  Type
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ text-logo border-theme-danger-200"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-1"
            >
              <span>
                ROBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="float-right outline-none focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-neutral-300"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-1"
            >
              <span>
                MATBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="float-right outline-none focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ text-theme-warning-400 border-theme-warning-200"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-1"
            >
              <span>
                OLEBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="float-right outline-none focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="sc-AxjAm gSuvFI w-full mt-10 mb-5"
      color="primary"
      type="button"
    >
      Add Peer
    </button>
  </div>
</div>
`;

exports[`PeerList should render with empty peer list 1`] = `
<div>
  <div>
    <div
      class="sc-AxiKw jaovnp"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Network
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Name
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Peer IP
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                >
                  Type
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <button
      class="sc-AxjAm gSuvFI w-full mt-10 mb-5"
      color="primary"
      type="button"
    >
      Add Peer
    </button>
  </div>
</div>
`;
